[project]
name = "langgraph-starter"
version = "0.1.0"
description = "LangGraph Starter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.0.4",
    "exa-py>=1.15.2",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.31",
    "langchain[google-genai]>=0.3.27",
    "langgraph-api>=0.4.1",
    "langgraph-cli[inmem]>=0.3.8",
    "markitdown>=0.0.1a3",
    "pandas>=2.3.2",
    "ratelimit>=2.2.1",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.16",
]

[tool.setuptools.packages.find]
where = ["."]
